--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ body {}
 }
 
 header {
-	background-color: #ffbfbf;
+	background-color: #fddece;
 }
 
 .navBar {
@@ -120,8 +120,8 @@ header {
 
 a {
 	text-decoration: none;
-	color: #1c1b1b;
-	font-weight: 800;
+	color: #424551;
+	font-weight: 600;
 }
 
 .navBar__logo {
@@ -140,7 +140,7 @@ a {
 	width: 206px;
 	border: none;
 	border-radius: 5px;
-
+	margin-right: 36px;
 }
 
 .button--gradient {
@@ -164,14 +164,16 @@ a {
 
 .button--double {
 	display: flex;
+
 }
 
 .button__invis {
-
 	background-color: rgba(28, 28, 28, 0);
 	border: none;
 	color: #1c1b1b;
 	font-weight: 500;
+	display: flex;
+	align-items: center;
 }
 
 .log-in__button {
@@ -181,7 +183,7 @@ a {
 .double__img {
 	max-width: 17px;
 	max-height: 17px;
-	padding-right: 4px;
+	padding-right: 2px;
 }
 
 .header__body {
@@ -219,16 +221,16 @@ a {
 .button--clear {
 	width: 148px;
 	height: 52px;
-	border-color: #F45C43;
+	border-color: #FF3F3A;
 	box-shadow: none;
-	color: #F45C43;
+	color: #FF3F3A;
 	border-radius: 5px;
 	background-color: rgba(28, 28, 28, 0);
 	margin-right: 24px;
 }
 
 .button--clear:hover {
-	background-color: #F45C43;
+	background-color: #FF3F3A;
 	color: white;
 	border: none;
 	transition: .5s;
@@ -261,7 +263,7 @@ a {
 
 .stats__block::before {
 	content: '·';
-	color: #F45C43;
+	color: #FF3F3A;
 	font-size: 100px;
 	left: -70px;
 	position: absolute;
@@ -302,14 +304,14 @@ a {
 }
 
 .text-small {
-	color: #1c1b1b;
+	color: #1E212C;
 	font-size: 16px;
 	font-weight: 700;
 	text-transform: uppercase;
 }
 
 .header__text {
-	color: #1c1b1b;
+	color: #1E212C;
 	font-size: 46px;
 	font-weight: 700;
 	padding-bottom: 40px;
@@ -324,9 +326,9 @@ a {
 
 .about__list {
 	list-style: none;
-	background: url(img/about__check.svg) no-repeat;
+	background: url(../img/about__check.svg) no-repeat;
 	background-position: 0 50%;
-	color: #1c1b1b;
+	color: #424551;
 	padding: 6px 0 6px 24px;
 	display: flex;
 	align-self: flex-start;
@@ -394,7 +396,7 @@ a {
 .courses__card__group {
 	padding-left: 32px;
 	border: solid 1px;
-	border-color: gainsboro;
+	border-color: #E5E8ED;
 	border-radius: 3px;
 	border-left: none;
 
@@ -411,11 +413,11 @@ a {
 }
 
 .card__header--marketing {
-	background-color: #00a868;
+	background-color: #03CEA4;
 }
 
 .card__text {
-	color: #1c1b1b;
+	color: #1E212C;
 	font-size: 20px;
 	font-weight: 700;
 
@@ -430,20 +432,20 @@ a {
 .card__name::before {
 	content: '|';
 	display: block;
-	color: gainsboro;
+	color: #7F8186;
 	position: absolute;
 	left: 0;
 	margin: auto;
 }
 
 .card__prise {
-	color: #EB3349;
+	color: #FF4242;
 	font-weight: 700;
 	padding-right: 8px;
 }
 
 .card__name {
-	color: gainsboro;
+	color: #787A80;
 	font-weight: 400;
 	position: relative;
 	padding-left: 10px;
@@ -452,37 +454,37 @@ a {
 .courses__card__group2 {
 	padding-left: 32px;
 	border: solid 1px;
-	border-color: gainsboro;
+	border-color: #E5E8ED;
 	border-radius: 3px;
 	border-left: none;
 }
 
 .card__header--management {
-	background-color: #63acff;
+	background-color: #5A87FC;
 }
 
 .courses__card__group3 {
 	padding-left: 32px;
 	border: solid 1px;
-	border-color: gainsboro;
+	border-color: #E5E8ED;
 	border-radius: 3px;
 	border-left: none;
 }
 
 .card__header--hr {
-	background-color: orange;
+	background-color: #F3982E;
 }
 
 .courses__card__group4 {
 	padding-left: 32px;
 	border: solid 1px;
-	border-color: gainsboro;
+	border-color: #E5E8ED;
 	border-radius: 3px;
 	border-left: none;
 }
 
 .card__header--design {
-	background-color: #F52F6E;
+	background-color: #F13470;
 }
 
 .main__benefits {}
@@ -503,6 +505,10 @@ a {
 	justify-content: space-between;
 }
 
+.double__img {
+	margin: 8px;
+}
+
 .benefits__button-width {
 	width: 307px;
 	height: 46px;
@@ -510,6 +516,16 @@ a {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	color: #9A9CA5;
+	font-size: 16px;
+}
+
+.benefits__button-width:first-child {
+	color: #FF3F3A;
+}
+
+.benefits__button-width:first-child:hover {
+	color: #fff;
 }
 
 .benefits__body {
@@ -526,16 +542,18 @@ a {
 	font-size: 32px;
 	font-weight: 700;
 	padding-bottom: 24px;
+	color: #1E212C;
 }
 
 .benefits__text {
 	font-size: 16px;
+	color: #424551;
 }
 
 .benefits__img {}
 
 .main-beige {
-	background-color: beige;
+	background-color: #fddece;
 }
 
 .text-small-center {
@@ -591,12 +609,14 @@ a {
 .event__date {
 	font-size: 20px;
 	font-weight: 600;
+	color: #1E212C;
 }
 
 .event__time {
-	color: gainsboro;
+	color: #787A80;
 	font-size: 16px;
 	font-weight: 500;
+
 }
 
 .event__group2 {
@@ -607,10 +627,13 @@ a {
 .event__text {
 	font-size: 20px;
 	font-weight: 600;
+	color: #1E212C;
 }
 
+
+
 .event__class {
-	color: gainsboro;
+	color: #787A80;
 	font-size: 16px;
 	font-weight: 500;
 }
@@ -650,6 +673,7 @@ a {
 	padding: 0 20px;
 	font-size: 28px;
 	font-weight: 600;
+	color: #1E212C;
 }
 
 .footer__button-bigue {
@@ -669,7 +693,7 @@ a {
 .certificate__group1 {}
 
 .certificate__text {
-	color: gainsboro;
+	color: #424551;
 	font-weight: 700;
 }
 
@@ -766,7 +790,7 @@ a {
 
 .team__name {
 	padding: 16px 0 4px 0;
-	color: #1c1b1b;
+	color: #4E515C;
 	font-size: 20px;
 	font-weight: 700;
 	display: flex;
@@ -774,8 +798,8 @@ a {
 }
 
 .prof {
-	color: #1c1b1b;
-	font-size: 206px;
+	color: #787A80;
+	font-size: 16px;
 	font-weight: 700;
 	display: flex;
 	justify-content: center;
@@ -977,6 +1001,7 @@ a {
 	margin-right: 24px;
 	position: relative;
 	padding-top: 16px;
+	color: #787A80;
 }
 
 .blog__li:first-child::before {
@@ -985,13 +1010,12 @@ a {
 
 .blog__li::before {
 	content: '|';
-	font-weight: 700;
+	font-weight: 500;
 	display: block;
-	color: gainsboro;
+	color: #787A80;
 	position: absolute;
 	left: -15px;
 	margin: auto;
-
 }
 
 
@@ -1012,6 +1036,7 @@ a {
 	line-height: 30px;
 	font-weight: 700;
 	padding: 8px 0;
+	color: #1E212C;
 }
 
 .blog__text__footer {
@@ -1019,6 +1044,7 @@ a {
 	line-height: 25.6px;
 	font-weight: 400;
 	padding-bottom: 16px;
+	color: #424551;
 }
 
 .blog__a {
@@ -1026,15 +1052,16 @@ a {
 	line-height: 25.6px;
 	font-weight: 700;
 	position: relative;
+	color: #1E212C;
 }
 
 
 .blog__a::before {
 	content: '→';
 	display: block;
-	color: #F45C43;
+	color: #FF3F3A;
 	position: absolute;
-	left: 50px;
+	left: 55px;
 	bottom: 3px;
 	font-weight: 900;
 	font-size: 30px;
@@ -1051,18 +1078,15 @@ a {
 
 .searchButton {
 	border: none;
-	border: 1px solid #E0E0E0;
-	border-radius: 5px;
+	border: 1px solid #D7DADD;
+	border-radius: 4px;
 	outline: none;
 	Width: 422px;
 	Height: 52px;
 	padding-left: 16px;
 	margin-right: 24px;
+	color: #9A9CA5;
 }
-
-.button {}
-
-.button--gradient {}
 
 .subscribe__button {
 	height: 52px;
@@ -1070,8 +1094,8 @@ a {
 }
 
 .footer__info {
-	background-color: #0e0724;
-	color: white;
+	background-color: #1E212C;
+	color: #A5A6AB;
 
 
 }
@@ -1116,6 +1140,7 @@ a {
 .footer__h3 {
 	font-size: 16px;
 	padding-bottom: 16px;
+	color: #FFFFFF;
 }
 
 .footer__ul {}
@@ -1135,6 +1160,7 @@ a {
 	padding-left: 24px;
 	background: url(../img/mail.svg) no-repeat;
 	background-position: 0px 6px;
+
 }
 
 .footer__info_group3 {
@@ -1154,11 +1180,11 @@ a {
 	border: none;
 	width: 286px;
 	height: 36px;
-	border: gainsboro solid 1px;
+	border: #61636B solid 1px;
 	border-radius: 4px;
-	background-color: #444;
+	background-color: #54565F;
 	outline: none;
-	color: gainsboro;
+	color: #A3A4A8;
 }
 
 .footer__p-small {
@@ -1166,7 +1192,7 @@ a {
 }
 
 footer {
-	background-color: #27252e;
+	background-color: #292C37;
 }
 
 .footer {
@@ -1178,8 +1204,14 @@ footer {
 	padding: 20px 0;
 }
 
-.made__p {}
+.made__p {
+	font-size: 12px;
+}
 
 .heart {}
 
-.goTop {}
+.goTop {
+	color: #A9ABAF;
+	font-size: 14px;
+	font-weight: 700;
+}
