--- a/css/style.css
+++ b/css/style.css
@@ -678,7 +678,7 @@ a {
 .certificate__body {
 	margin: auto;
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	padding: 120px 0 0 50px;
 	max-width: 1330px;
 }
@@ -1058,7 +1058,6 @@ a {
 	margin: auto;
 	display: flex;
 	justify-content: center;
-	padding-bottom: 180px;
 }
 
 .searchButton {
@@ -1077,6 +1076,12 @@ a {
 	height: 52px;
 	width: 154px;
 }
+
+.sibscribe__img__group {
+	display: flex;
+	justify-content: space-between;
+}
+
 
 .footer__info {
 	background-color: #1E212C;
@@ -1169,6 +1174,8 @@ a {
 	background-color: #54565F;
 	outline: none;
 	color: #A3A4A8;
+	background: url(../img/footer__arrow.svg) no-repeat;
+	background-position: 255px 13px;
 }
 
 .footer__p-small {
