--- a/css/blog.css
+++ b/css/blog.css
@@ -128,23 +128,20 @@
 }
 
 .custom-checkbox:checked+label::before {
-	border-color: #0b76ef;
-	background-color: #0b76ef;
+	border-color: #FF4242;
+	background-color: #FF4242;
 	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
 
-/* стили при наведении курсора на checkbox */
 .custom-checkbox:not(:disabled):not(:checked)+label:hover::before {
-	border-color: #b3d7ff;
+	border-color: #FF4242;
 }
 
-/* стили для активного состояния чекбокса (при нажатии на него) */
 .custom-checkbox:not(:disabled):active+label::before {
-	background-color: #b3d7ff;
-	border-color: #b3d7ff;
+	background-color: #FF4242;
+	border-color: #FF4242;
 }
 
-/* стили для чекбокса, находящегося в состоянии disabled */
 .custom-checkbox:disabled+label::before {
 	background-color: #e9ecef;
 }
